--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,7 +1,7 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORDS}
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=william
+spring.datasource.password=OqiIoWe1R4Prs9HTj5EKF0K0q2zWfJOc'
+spring.datasource.url=DATABASE_USERNAME
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
